[tool.poetry]
name = "wan-show-parsing"
version = "0.0.1"
description = ""
authors = ["Rena <rjt.rockx@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wan_show_parsing"}]

[tool.poetry.dependencies]
python = ">3.8,<4.0"
whispercpp = "^0.0.17"
numpy = "^1.24.2"
yt-dlp = "^2023.3.4"
ffmpeg-python = "^0.2.0"
openai = "^0.27.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
